<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white" />
    <GridLayout style="@style/month_of_year">
        <TextView style="@style/day_of_year" android:text="@string/monday_short" />
        <TextView style="@style/day_of_year" android:text="@string/tuesday_short" />
        <TextView style="@style/day_of_year" android:text="@string/wednesday_short" />
        <TextView style="@style/day_of_year" android:text="@string/thursday_short" />
        <TextView style="@style/day_of_year" android:text="@string/friday_short" />
        <TextView style="@style/day_of_year" android:text="@string/saturday_short" />
        <TextView style="@style/day_of_year" android:text="@string/sunday_short" />
    </GridLayout>
</LinearLayout>