<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <Spinner android:id="@+id/month_spinner" style="@style/top_spinner" />
        <Spinner android:id="@+id/year_spinner" style="@style/top_spinner" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/calendar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:columnCount="7"
        android:rowCount="7">
        <TextView
            android:id="@+id/monday_label"
            android:text="@string/monday"
            style="@style/day_of_week_label" />
        <TextView
            android:id="@+id/tuesday_label"
            android:text="@string/tuesday"
            style="@style/day_of_week_label" />
        <TextView
            android:id="@+id/wednesday_label"
            android:text="@string/wednesday"
            style="@style/day_of_week_label" />
        <TextView
            android:id="@+id/thursday_label"
            android:text="@string/thursday"
            style="@style/day_of_week_label" />
        <TextView
            android:id="@+id/friday_label"
            android:text="@string/friday"
            style="@style/day_of_week_label" />
        <TextView
            android:id="@+id/saturday_label"
            android:text="@string/saturday"
            style="@style/day_of_week_label" />
        <TextView
            android:id="@+id/sunday_label"
            android:text="@string/sunday"
            style="@style/day_of_week_label" />
    </GridLayout>

    <TextView
        android:id="@+id/notes_text_view"
        android:hint="@string/notes"
        android:visibility="visible"
        style="@style/notes_text_view" />
    <EditText
        android:id="@+id/notes_edit_text"
        android:hint="@string/notes"
        android:autofillHints="Notes"
        android:inputType="textMultiLine"
        android:visibility="gone"
        android:enabled="true"
        style="@style/notes_edit_text" />

    <Button
        android:id="@+id/year_view_btn"
        android:visibility="visible"
        style="@style/year_view_btn" />
    <Button
        android:id="@+id/save_note_btn"
        android:visibility="gone"
        style="@style/save_note_btn" />
</LinearLayout>
